k8s/gvisor-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: normal
spec:
  nodeSelector:
    sandbox/gvisor: "true"
  containers:
  - name: alpine
    image: alpine
    command: ["sleep", "infinity"]
---
apiVersion: v1
kind: Pod
metadata:
  name: sandboxed
spec:
  runtimeClassName: gvisor
  containers:
  - name: alpine
    image: alpine
    command: ["sleep", "infinity"]
