k8s/gateway-route-matches.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blue
spec:
  parentRefs: [ { name: eg, namespace: envoy-gateway-system } ]
  rules:
  - matches: [ { path: { type: PathPrefix, value: /green } } ]
    backendRefs: [ { name: green, port: 80 } ]
  - matches: [ { headers: [ { name: x-color, value: green } ] } ]
    backendRefs: [ { name: green, port: 80 } ]
  - backendRefs: [ { name: blue, port: 80 } ]
