k8s/kyverno-pod-color-1.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: pod-color-policy-1
spec:
  validationActions: [ Deny ]
  matchConstraints:
    resourceRules:
    - apiGroups: [ "" ]
      apiVersions: [ v1 ]
      operations: [ CREATE, UPDATE ]
      resources: [ pods ]
  validations:
  - expression: >-
      !('color' in object.metadata.?labels.orValue({})) ||
      object.metadata.labels.color in [ 'red', 'green', 'blue' ]
    message: "If it exists, the label color must be red, green, or blue."
