k8s/kyverno-pod-color-3.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: pod-color-policy-3
spec:
  validationActions: [ Deny ]
  evaluation:
    background:
      enabled: false
  matchConstraints:
    resourceRules:
    - apiGroups: [ "" ]
      apiVersions: [ v1 ]
      operations: [ UPDATE ]
      resources: [ pods ]
  matchConditions:
  - name: had-color
    expression: "'color' in oldObject.metadata.?labels.orValue({})"
  validations:
  - expression: "'color' in object.metadata.?labels.orValue({})"
    message: "Once label color has been added, it cannot be removed."
